--- a/404.html
+++ b/404.html
@@ -45,11 +45,11 @@
 					<div class="sidenav__scroll">
 						<div class="sidenav__inner">
 							<div class="nav nav_sidenav">
-								<div class="nav__item"><a class="nav__link" href="/about.html">О компании</a></div>
-								<div class="nav__item"><a class="nav__link" href="/production.html">Продукция</a></div>
-								<div class="nav__item"><a class="nav__link" href="/services.html">Услуги</a></div>
-								<div class="nav__item"><a class="nav__link" href="/reviews.html">Отзывы</a></div>
-								<div class="nav__item"><a class="nav__link" href="/contacts.html">Контакты</a></div>
+								<div class="nav__item"><a class="nav__link" href="/agrostar/about.html">О компании</a></div>
+								<div class="nav__item"><a class="nav__link" href="/agrostar/production.html">Продукция</a></div>
+								<div class="nav__item"><a class="nav__link" href="/agrostar/services.html">Услуги</a></div>
+								<div class="nav__item"><a class="nav__link" href="/agrostar/reviews.html">Отзывы</a></div>
+								<div class="nav__item"><a class="nav__link" href="/agrostar/contacts.html">Контакты</a></div>
 							</div>
 							<div class="sidenav__phones">
 								<div class="phone-drop__img"><svg class="phone-drop__icon svg">
@@ -66,53 +66,53 @@
 					<div class="grid">
 						<div class="grid__row">
 							<div class="grid__col">
-								<div class="header__inner header__inner_mobile"><a class="header__menu js-menu-trigger"><span class="header__menu-icon"></span></a><a class="header__logo" href="/"><svg class="svg">
+								<div class="header__inner header__inner_mobile"><a class="header__menu js-menu-trigger"><span class="header__menu-icon"></span></a><a class="header__logo" href="/agrostar/"><svg class="svg">
 											<use xlink:href="img/svgSprite.svg#logo_as_new"></use>
 										</svg></a><a class="header__call" href="tel:88432788654"><svg class="header__icon svg">
 											<use xlink:href="img/svgSprite.svg#icon__phone"></use>
 										</svg></a></div>
-								<div class="header__inner"><a class="header__logo" href="/"><svg class="svg">
+								<div class="header__inner"><a class="header__logo" href="/agrostar/"><svg class="svg">
 											<use xlink:href="img/svgSprite.svg#logo_as_new"></use>
 										</svg></a>
 									<div class="header__nav">
 										<div class="nav">
-											<div class="nav__item"><a class="nav__link" href="/about.html">О компании<div class="nav__trigger"><svg class="nav__icon svg">
+											<div class="nav__item"><a class="nav__link" href="/agrostar/about.html">О компании<div class="nav__trigger"><svg class="nav__icon svg">
 															<use xlink:href="img/svgSprite.svg#icon__triangle"></use>
 														</svg></div></a>
 												<div class="nav__inner">
 													<div class="nav__drop">
-														<div class="nav__item"><a class="nav__link" href="/about.html#about">О нас</a></div>
-														<div class="nav__item"><a class="nav__link" href="/about.html#services">Услуги</a></div>
-														<div class="nav__item"><a class="nav__link" href="/about.html#prod">О производстве</a></div>
-														<div class="nav__item"><a class="nav__link" href="/about.html#lab">О лаборатории</a></div>
-														<div class="nav__item"><a class="nav__link" href="/about.html#vacancy">Вакансии</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#about">О нас</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#services">Услуги</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#prod">О производстве</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#lab">О лаборатории</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#vacancy">Вакансии</a></div>
 													</div>
 												</div>
 											</div>
-											<div class="nav__item"><a class="nav__link" href="/production.html">Продукция<div class="nav__trigger"><svg class="nav__icon svg">
+											<div class="nav__item"><a class="nav__link" href="/agrostar/production.html">Продукция<div class="nav__trigger"><svg class="nav__icon svg">
 															<use xlink:href="img/svgSprite.svg#icon__triangle"></use>
 														</svg></div></a>
 												<div class="nav__inner">
 													<div class="nav__drop">
-														<div class="nav__item"><a class="nav__link" href="/production-list.html">Для повышения удоев</a></div>
-														<div class="nav__item"><a class="nav__link" href="/production-list.html">Для здоровья коров</a></div>
-														<div class="nav__item"><a class="nav__link" href="/production-list.html">Для выращивания телят</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/production-list.html">Для повышения удоев</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/production-list.html">Для здоровья коров</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/production-list.html">Для выращивания телят</a></div>
 													</div>
 												</div>
 											</div>
-											<div class="nav__item"><a class="nav__link" href="/services.html">Услуги<div class="nav__trigger"><svg class="nav__icon svg">
+											<div class="nav__item"><a class="nav__link" href="/agrostar/services.html">Услуги<div class="nav__trigger"><svg class="nav__icon svg">
 															<use xlink:href="img/svgSprite.svg#icon__triangle"></use>
 														</svg></div></a>
 												<div class="nav__inner">
 													<div class="nav__drop">
-														<div class="nav__item"><a class="nav__link" href="/audit.html">Аудит хозяйств</a></div>
-														<div class="nav__item"><a class="nav__link" href="/diet.html">Расчет рациона</a></div>
-														<div class="nav__item"><a class="nav__link" href="/lab.html">Лабораторные исследования</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/audit.html">Аудит хозяйств</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/diet.html">Расчет рациона</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/lab.html">Лабораторные исследования</a></div>
 													</div>
 												</div>
 											</div>
-											<div class="nav__item"><a class="nav__link" href="/reviews.html">Отзывы</a></div>
-											<div class="nav__item"><a class="nav__link" href="/contacts.html">Контакты</a></div>
+											<div class="nav__item"><a class="nav__link" href="/agrostar/reviews.html">Отзывы</a></div>
+											<div class="nav__item"><a class="nav__link" href="/agrostar/contacts.html">Контакты</a></div>
 										</div>
 									</div>
 									<div class="header__drop">
@@ -140,7 +140,7 @@
 						<div class="grid__row">
 							<div class="grid__col">
 								<div class="subheader__block">
-									<div class="breadcrumbs"><a class="breadcrumbs__item" href="/">Главная</a></div>
+									<div class="breadcrumbs"><a class="breadcrumbs__item" href="/agrostar/">Главная</a></div>
 									<h1 class="subheader__heading">Страницы не существует</h1>
 								</div>
 							</div>
@@ -152,7 +152,9 @@
 						<div class="grid__row">
 							<div class="grid__col">
 								<h2 class="page__title page__title_1">Ошибка 404</h2>
-								<p class="page__p">Запрашиваемая вами страница не существует. Проверьте правильность написания адреса или перейдите на <a href='/' class='link'>главную страницу</a>.</p>
+								<p class="page__p">Запрашиваемая вами страница не существует. Проверьте правильность написания адреса или перейдите на
+									<a class="link" href="/agrostar/">главную страницу</a>
+								</p>
 							</div>
 						</div>
 					</div>
