--- a/about.html
+++ b/about.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="ru-RU">
 	<head>
-		<base href="https://motosasha.github.io/agrostar/">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=3, minimum-scale=0.1">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -45,11 +44,11 @@
 					<div class="sidenav__scroll">
 						<div class="sidenav__inner">
 							<div class="nav nav_sidenav">
-								<div class="nav__item"><a class="nav__link" href="/agrostar/about.html">О компании</a></div>
-								<div class="nav__item"><a class="nav__link" href="/agrostar/production.html">Продукция</a></div>
-								<div class="nav__item"><a class="nav__link" href="/agrostar/services.html">Услуги</a></div>
-								<div class="nav__item"><a class="nav__link" href="/agrostar/reviews.html">Отзывы</a></div>
-								<div class="nav__item"><a class="nav__link" href="/agrostar/contacts.html">Контакты</a></div>
+								<div class="nav__item"><a class="nav__link" href="/about.html">О компании</a></div>
+								<div class="nav__item"><a class="nav__link" href="/production.html">Продукция</a></div>
+								<div class="nav__item"><a class="nav__link" href="/services.html">Услуги</a></div>
+								<div class="nav__item"><a class="nav__link" href="/reviews.html">Отзывы</a></div>
+								<div class="nav__item"><a class="nav__link" href="/contacts.html">Контакты</a></div>
 							</div>
 							<div class="sidenav__phones">
 								<div class="phone-drop__img"><svg class="phone-drop__icon svg">
@@ -66,53 +65,53 @@
 					<div class="grid">
 						<div class="grid__row">
 							<div class="grid__col">
-								<div class="header__inner header__inner_mobile"><a class="header__menu js-menu-trigger"><span class="header__menu-icon"></span></a><a class="header__logo" href="/agrostar/"><svg class="svg">
+								<div class="header__inner header__inner_mobile"><a class="header__menu js-menu-trigger"><span class="header__menu-icon"></span></a><a class="header__logo" href="/"><svg class="svg">
 											<use xlink:href="img/svgSprite.svg#logo_as_new"></use>
 										</svg></a><a class="header__call" href="tel:88432788654"><svg class="header__icon svg">
 											<use xlink:href="img/svgSprite.svg#icon__phone"></use>
 										</svg></a></div>
-								<div class="header__inner"><a class="header__logo" href="/agrostar/"><svg class="svg">
+								<div class="header__inner"><a class="header__logo" href="/"><svg class="svg">
 											<use xlink:href="img/svgSprite.svg#logo_as_new"></use>
 										</svg></a>
 									<div class="header__nav">
 										<div class="nav">
-											<div class="nav__item"><a class="nav__link" href="/agrostar/about.html">О компании<div class="nav__trigger"><svg class="nav__icon svg">
+											<div class="nav__item"><a class="nav__link" href="/about.html">О компании<div class="nav__trigger"><svg class="nav__icon svg">
 															<use xlink:href="img/svgSprite.svg#icon__triangle"></use>
 														</svg></div></a>
 												<div class="nav__inner">
 													<div class="nav__drop">
-														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#about">О нас</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#services">Услуги</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#prod">О производстве</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#lab">О лаборатории</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#vacancy">Вакансии</a></div>
+														<div class="nav__item"><a class="nav__link" href="/about.html#about">О нас</a></div>
+														<div class="nav__item"><a class="nav__link" href="/about.html#services">Услуги</a></div>
+														<div class="nav__item"><a class="nav__link" href="/about.html#prod">О производстве</a></div>
+														<div class="nav__item"><a class="nav__link" href="/about.html#lab">О лаборатории</a></div>
+														<div class="nav__item"><a class="nav__link" href="/about.html#vacancy">Вакансии</a></div>
 													</div>
 												</div>
 											</div>
-											<div class="nav__item"><a class="nav__link" href="/agrostar/production.html">Продукция<div class="nav__trigger"><svg class="nav__icon svg">
+											<div class="nav__item"><a class="nav__link" href="/production.html">Продукция<div class="nav__trigger"><svg class="nav__icon svg">
 															<use xlink:href="img/svgSprite.svg#icon__triangle"></use>
 														</svg></div></a>
 												<div class="nav__inner">
 													<div class="nav__drop">
-														<div class="nav__item"><a class="nav__link" href="/agrostar/production-list.html">Для повышения удоев</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/production-list.html">Для здоровья коров</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/production-list.html">Для выращивания телят</a></div>
+														<div class="nav__item"><a class="nav__link" href="/production-list.html">Для повышения удоев</a></div>
+														<div class="nav__item"><a class="nav__link" href="/production-list.html">Для здоровья коров</a></div>
+														<div class="nav__item"><a class="nav__link" href="/production-list.html">Для выращивания телят</a></div>
 													</div>
 												</div>
 											</div>
-											<div class="nav__item"><a class="nav__link" href="/agrostar/services.html">Услуги<div class="nav__trigger"><svg class="nav__icon svg">
+											<div class="nav__item"><a class="nav__link" href="/services.html">Услуги<div class="nav__trigger"><svg class="nav__icon svg">
 															<use xlink:href="img/svgSprite.svg#icon__triangle"></use>
 														</svg></div></a>
 												<div class="nav__inner">
 													<div class="nav__drop">
-														<div class="nav__item"><a class="nav__link" href="/agrostar/audit.html">Аудит хозяйств</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/diet.html">Расчет рациона</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/lab.html">Лабораторные исследования</a></div>
+														<div class="nav__item"><a class="nav__link" href="/audit.html">Аудит хозяйств</a></div>
+														<div class="nav__item"><a class="nav__link" href="/diet.html">Расчет рациона</a></div>
+														<div class="nav__item"><a class="nav__link" href="/lab.html">Лабораторные исследования</a></div>
 													</div>
 												</div>
 											</div>
-											<div class="nav__item"><a class="nav__link" href="/agrostar/reviews.html">Отзывы</a></div>
-											<div class="nav__item"><a class="nav__link" href="/agrostar/contacts.html">Контакты</a></div>
+											<div class="nav__item"><a class="nav__link" href="/reviews.html">Отзывы</a></div>
+											<div class="nav__item"><a class="nav__link" href="/contacts.html">Контакты</a></div>
 										</div>
 									</div>
 									<div class="header__drop">
@@ -140,7 +139,7 @@
 						<div class="grid__row">
 							<div class="grid__col">
 								<div class="subheader__block">
-									<div class="breadcrumbs"><a class="breadcrumbs__item" href="/agrostar/">Главная</a></div>
+									<div class="breadcrumbs"><a class="breadcrumbs__item" href="/">Главная</a></div>
 									<h1 class="subheader__heading">О компании</h1>
 									<div class="subheader__subnav">
 										<div class="subnav subnav_about"><a class="subnav__item" href="/about.html#about">О нас</a><a class="subnav__item" href="/about.html#services">Услуги</a><a class="subnav__item" href="/about.html#prod">О производстве</a><a class="subnav__item" href="/about.html#lab">О лаборатории</a><a class="subnav__item" href="/about.html#vacancy">Вакансии</a></div>
@@ -191,29 +190,21 @@
 								</div>
 							</div>
 						</div>
-					</div>
-				</section>
-				<section class="section section_video">
-					<div class="grid">
 						<div class="grid__row">
 							<div class="grid__col">
-								<div class="services">
+								<div class="video">
 									<h2 class="page__title page__title_1 page__title_tac">Передовые технологии в области кормления</h2>
-									<div class="video"><video width="400" height="300" controls="controls" poster="img/img__video-cover.jpg">
+									<div class="video__inner"><video width="400" height="300" controls="controls" poster="img/img__video-cover.jpg">
 											<source src="video/video.mp4" type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;">Тег video не поддерживается вашим браузером.<a href="video/video.mp4">Скачайте видео</a>.
 										</video></div>
 								</div>
 							</div>
 						</div>
-					</div>
-				</section>
-				<section class="section section_video">
-					<div class="grid">
 						<div class="grid__row">
 							<div class="grid__col">
-								<div class="services">
+								<div class="video">
 									<h2 class="page__title page__title_1 page__title_tac">Передовые технологии в области кормления</h2>
-									<div class="video"><iframe src="https://www.youtube.com/embed/9WkDZ95XToM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></div>
+									<div class="video__inner"><iframe src="https://www.youtube.com/embed/9WkDZ95XToM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></div>
 								</div>
 							</div>
 						</div>
@@ -308,7 +299,7 @@
 									<div class="slider slider_lab_mini">
 										<div class="slider__slide">
 											<div class="slider__lab"><svg class="slider__lab-icon svg">
-													<use xlink:href="img/svgSprite.svg#icon__comb"></use>
+													<use xlink:href="/img/svgSprite.svg#icon__comb"></use>
 												</svg>
 												<div class="slider__lab-inner">
 													<div class="slider__lab-title">Лаборатория оснащена современным испытательным оборудованием ведущих мировых производителей</div>
@@ -321,7 +312,7 @@
 										</div>
 										<div class="slider__slide">
 											<div class="slider__lab"><svg class="slider__lab-icon svg">
-													<use xlink:href="img/svgSprite.svg#icon__comb"></use>
+													<use xlink:href="/img/svgSprite.svg#icon__comb"></use>
 												</svg>
 												<div class="slider__lab-inner">
 													<div class="slider__lab-title">Заголовок</div>
@@ -347,7 +338,7 @@
 									<h2 class="page__title page__title_1">Вакансии</h2>
 									<p class="page__p">Люди — наш основной ресурс. От личных качеств наших сотрудников, их профессионализма и способности к сотрудничеству напрямую зависит качество услуг, которые получает клиент. Мы заинтересованы в привлечении активных, талантливых, целеустремленных, готовых развиваться и ответственных сотрудников.</p>
 									<div class="vacancy-list__title">Список вакансий</div>
-									<div class="vacancy-list-tiles"><a class="vacancy-list-tiles__item" href="/agrostar/vacancy.html">
+									<div class="vacancy-list-tiles"><a class="vacancy-list-tiles__item" href="/vacancy.html">
 											<div class="vacancy-list-tiles__info">
 												<div class="vacancy-list-tiles__title">Консультант-эксперт по крупному рогатому скоту (Волгоградская, Ярославская, Костромская, Ивановская области)</div>
 												<div class="vacancy-list-tiles__row">
@@ -358,7 +349,7 @@
 											<div class="vacancy-list-tiles__icon"><svg class="svg">
 													<use xlink:href="img/svgSprite.svg#icon__arrow_right"></use>
 												</svg></div>
-										</a><a class="vacancy-list-tiles__item" href="/agrostar/vacancy.html">
+										</a><a class="vacancy-list-tiles__item" href="/vacancy.html">
 											<div class="vacancy-list-tiles__info">
 												<div class="vacancy-list-tiles__title">Консультант-эксперт по крупному рогатому скоту (Волгоградская, Ярославская, Костромская, Ивановская области)</div>
 												<div class="vacancy-list-tiles__row">
