--- a/audit.html
+++ b/audit.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="ru-RU">
 	<head>
-		<base href="https://motosasha.github.io/agrostar/">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=3, minimum-scale=0.1">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -45,11 +44,11 @@
 					<div class="sidenav__scroll">
 						<div class="sidenav__inner">
 							<div class="nav nav_sidenav">
-								<div class="nav__item"><a class="nav__link" href="/agrostar/about.html">О компании</a></div>
-								<div class="nav__item"><a class="nav__link" href="/agrostar/production.html">Продукция</a></div>
-								<div class="nav__item"><a class="nav__link" href="/agrostar/services.html">Услуги</a></div>
-								<div class="nav__item"><a class="nav__link" href="/agrostar/reviews.html">Отзывы</a></div>
-								<div class="nav__item"><a class="nav__link" href="/agrostar/contacts.html">Контакты</a></div>
+								<div class="nav__item"><a class="nav__link" href="/about.html">О компании</a></div>
+								<div class="nav__item"><a class="nav__link" href="/production.html">Продукция</a></div>
+								<div class="nav__item"><a class="nav__link" href="/services.html">Услуги</a></div>
+								<div class="nav__item"><a class="nav__link" href="/reviews.html">Отзывы</a></div>
+								<div class="nav__item"><a class="nav__link" href="/contacts.html">Контакты</a></div>
 							</div>
 							<div class="sidenav__phones">
 								<div class="phone-drop__img"><svg class="phone-drop__icon svg">
@@ -66,53 +65,53 @@
 					<div class="grid">
 						<div class="grid__row">
 							<div class="grid__col">
-								<div class="header__inner header__inner_mobile"><a class="header__menu js-menu-trigger"><span class="header__menu-icon"></span></a><a class="header__logo" href="/agrostar/"><svg class="svg">
+								<div class="header__inner header__inner_mobile"><a class="header__menu js-menu-trigger"><span class="header__menu-icon"></span></a><a class="header__logo" href="/"><svg class="svg">
 											<use xlink:href="img/svgSprite.svg#logo_as_new"></use>
 										</svg></a><a class="header__call" href="tel:88432788654"><svg class="header__icon svg">
 											<use xlink:href="img/svgSprite.svg#icon__phone"></use>
 										</svg></a></div>
-								<div class="header__inner"><a class="header__logo" href="/agrostar/"><svg class="svg">
+								<div class="header__inner"><a class="header__logo" href="/"><svg class="svg">
 											<use xlink:href="img/svgSprite.svg#logo_as_new"></use>
 										</svg></a>
 									<div class="header__nav">
 										<div class="nav">
-											<div class="nav__item"><a class="nav__link" href="/agrostar/about.html">О компании<div class="nav__trigger"><svg class="nav__icon svg">
+											<div class="nav__item"><a class="nav__link" href="/about.html">О компании<div class="nav__trigger"><svg class="nav__icon svg">
 															<use xlink:href="img/svgSprite.svg#icon__triangle"></use>
 														</svg></div></a>
 												<div class="nav__inner">
 													<div class="nav__drop">
-														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#about">О нас</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#services">Услуги</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#prod">О производстве</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#lab">О лаборатории</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#vacancy">Вакансии</a></div>
+														<div class="nav__item"><a class="nav__link" href="/about.html#about">О нас</a></div>
+														<div class="nav__item"><a class="nav__link" href="/about.html#services">Услуги</a></div>
+														<div class="nav__item"><a class="nav__link" href="/about.html#prod">О производстве</a></div>
+														<div class="nav__item"><a class="nav__link" href="/about.html#lab">О лаборатории</a></div>
+														<div class="nav__item"><a class="nav__link" href="/about.html#vacancy">Вакансии</a></div>
 													</div>
 												</div>
 											</div>
-											<div class="nav__item"><a class="nav__link" href="/agrostar/production.html">Продукция<div class="nav__trigger"><svg class="nav__icon svg">
+											<div class="nav__item"><a class="nav__link" href="/production.html">Продукция<div class="nav__trigger"><svg class="nav__icon svg">
 															<use xlink:href="img/svgSprite.svg#icon__triangle"></use>
 														</svg></div></a>
 												<div class="nav__inner">
 													<div class="nav__drop">
-														<div class="nav__item"><a class="nav__link" href="/agrostar/production-list.html">Для повышения удоев</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/production-list.html">Для здоровья коров</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/production-list.html">Для выращивания телят</a></div>
+														<div class="nav__item"><a class="nav__link" href="/production-list.html">Для повышения удоев</a></div>
+														<div class="nav__item"><a class="nav__link" href="/production-list.html">Для здоровья коров</a></div>
+														<div class="nav__item"><a class="nav__link" href="/production-list.html">Для выращивания телят</a></div>
 													</div>
 												</div>
 											</div>
-											<div class="nav__item"><a class="nav__link" href="/agrostar/services.html">Услуги<div class="nav__trigger"><svg class="nav__icon svg">
+											<div class="nav__item"><a class="nav__link" href="/services.html">Услуги<div class="nav__trigger"><svg class="nav__icon svg">
 															<use xlink:href="img/svgSprite.svg#icon__triangle"></use>
 														</svg></div></a>
 												<div class="nav__inner">
 													<div class="nav__drop">
-														<div class="nav__item"><a class="nav__link" href="/agrostar/audit.html">Аудит хозяйств</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/diet.html">Расчет рациона</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/lab.html">Лабораторные исследования</a></div>
+														<div class="nav__item"><a class="nav__link" href="/audit.html">Аудит хозяйств</a></div>
+														<div class="nav__item"><a class="nav__link" href="/diet.html">Расчет рациона</a></div>
+														<div class="nav__item"><a class="nav__link" href="/lab.html">Лабораторные исследования</a></div>
 													</div>
 												</div>
 											</div>
-											<div class="nav__item"><a class="nav__link" href="/agrostar/reviews.html">Отзывы</a></div>
-											<div class="nav__item"><a class="nav__link" href="/agrostar/contacts.html">Контакты</a></div>
+											<div class="nav__item"><a class="nav__link" href="/reviews.html">Отзывы</a></div>
+											<div class="nav__item"><a class="nav__link" href="/contacts.html">Контакты</a></div>
 										</div>
 									</div>
 									<div class="header__drop">
@@ -140,7 +139,7 @@
 						<div class="grid__row">
 							<div class="grid__col">
 								<div class="subheader__block">
-									<div class="breadcrumbs"><a class="breadcrumbs__item" href="/agrostar/">Главная</a></div>
+									<div class="breadcrumbs"><a class="breadcrumbs__item" href="/">Главная</a></div>
 									<h1 class="subheader__heading">Аудит хозяйств</h1>
 									<div class="subheader__subnav">
 										<div class="subnav">
@@ -157,6 +156,9 @@
 						<div class="grid__row">
 							<div class="grid__col">
 								<h2 class="page__title page__title_1">Аудит молочной фермы — объективная и независимая экспертная оценка<br>Профессиональный и независимый взгляд на проблемы в хозяйстве.</h2>
+								<div class="video video_article">
+									<div class="video__inner"><iframe src="https://www.youtube.com/embed/9WkDZ95XToM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></div>
+								</div>
 								<p class="page__p">Независимый аудит — лучший способ выявить проблемы, которые не дают хозяйству работать с высокой эффективностью. Мы проводим комплексный аудит молочной фермы и анализируем все выявленные проблемы. С нашей помощью клиент сможет выявить факторы, которые оказывают негативное влияние на эффективность и экономику хозяйства. Все консультанты компании являются высококвалифицированными экспертами, которые готовы провести:<br><br>Отбор проб кормов для анализа;<br>Оценку кормового стола;<br>Оценку перевариваемости корма;<br>Оценку приготовления кормосмеси (соответствие рациону, однородность, потребление корма);<br>Оценку ПСР на ключевые показатели (влажность, сортировка, структурность);<br>Общую оценку стада (состояние животных, комфорт, субклинические заболевания);<br>Общую оценку телят (приём отёлов, выпойка, содержание, здоровье).</p><a class="page__button button js-popup" href="#popup-audit">Заказать аудит</a>
 							</div>
 						</div>
