--- a/contacts.html
+++ b/contacts.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html class="no-js" lang="ru-RU">
 	<head>
-		<base href="https://motosasha.github.io/agrostar/">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=3, minimum-scale=0.1">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -45,11 +44,11 @@
 					<div class="sidenav__scroll">
 						<div class="sidenav__inner">
 							<div class="nav nav_sidenav">
-								<div class="nav__item"><a class="nav__link" href="/agrostar/about.html">О компании</a></div>
-								<div class="nav__item"><a class="nav__link" href="/agrostar/production.html">Продукция</a></div>
-								<div class="nav__item"><a class="nav__link" href="/agrostar/services.html">Услуги</a></div>
-								<div class="nav__item"><a class="nav__link" href="/agrostar/reviews.html">Отзывы</a></div>
-								<div class="nav__item"><a class="nav__link" href="/agrostar/contacts.html">Контакты</a></div>
+								<div class="nav__item"><a class="nav__link" href="/about.html">О компании</a></div>
+								<div class="nav__item"><a class="nav__link" href="/production.html">Продукция</a></div>
+								<div class="nav__item"><a class="nav__link" href="/services.html">Услуги</a></div>
+								<div class="nav__item"><a class="nav__link" href="/reviews.html">Отзывы</a></div>
+								<div class="nav__item"><a class="nav__link" href="/contacts.html">Контакты</a></div>
 							</div>
 							<div class="sidenav__phones">
 								<div class="phone-drop__img"><svg class="phone-drop__icon svg">
@@ -66,53 +65,53 @@
 					<div class="grid">
 						<div class="grid__row">
 							<div class="grid__col">
-								<div class="header__inner header__inner_mobile"><a class="header__menu js-menu-trigger"><span class="header__menu-icon"></span></a><a class="header__logo" href="/agrostar/"><svg class="svg">
+								<div class="header__inner header__inner_mobile"><a class="header__menu js-menu-trigger"><span class="header__menu-icon"></span></a><a class="header__logo" href="/"><svg class="svg">
 											<use xlink:href="img/svgSprite.svg#logo_as_new"></use>
 										</svg></a><a class="header__call" href="tel:88432788654"><svg class="header__icon svg">
 											<use xlink:href="img/svgSprite.svg#icon__phone"></use>
 										</svg></a></div>
-								<div class="header__inner"><a class="header__logo" href="/agrostar/"><svg class="svg">
+								<div class="header__inner"><a class="header__logo" href="/"><svg class="svg">
 											<use xlink:href="img/svgSprite.svg#logo_as_new"></use>
 										</svg></a>
 									<div class="header__nav">
 										<div class="nav">
-											<div class="nav__item"><a class="nav__link" href="/agrostar/about.html">О компании<div class="nav__trigger"><svg class="nav__icon svg">
+											<div class="nav__item"><a class="nav__link" href="/about.html">О компании<div class="nav__trigger"><svg class="nav__icon svg">
 															<use xlink:href="img/svgSprite.svg#icon__triangle"></use>
 														</svg></div></a>
 												<div class="nav__inner">
 													<div class="nav__drop">
-														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#about">О нас</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#services">Услуги</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#prod">О производстве</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#lab">О лаборатории</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#vacancy">Вакансии</a></div>
+														<div class="nav__item"><a class="nav__link" href="/about.html#about">О нас</a></div>
+														<div class="nav__item"><a class="nav__link" href="/about.html#services">Услуги</a></div>
+														<div class="nav__item"><a class="nav__link" href="/about.html#prod">О производстве</a></div>
+														<div class="nav__item"><a class="nav__link" href="/about.html#lab">О лаборатории</a></div>
+														<div class="nav__item"><a class="nav__link" href="/about.html#vacancy">Вакансии</a></div>
 													</div>
 												</div>
 											</div>
-											<div class="nav__item"><a class="nav__link" href="/agrostar/production.html">Продукция<div class="nav__trigger"><svg class="nav__icon svg">
+											<div class="nav__item"><a class="nav__link" href="/production.html">Продукция<div class="nav__trigger"><svg class="nav__icon svg">
 															<use xlink:href="img/svgSprite.svg#icon__triangle"></use>
 														</svg></div></a>
 												<div class="nav__inner">
 													<div class="nav__drop">
-														<div class="nav__item"><a class="nav__link" href="/agrostar/production-list.html">Для повышения удоев</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/production-list.html">Для здоровья коров</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/production-list.html">Для выращивания телят</a></div>
+														<div class="nav__item"><a class="nav__link" href="/production-list.html">Для повышения удоев</a></div>
+														<div class="nav__item"><a class="nav__link" href="/production-list.html">Для здоровья коров</a></div>
+														<div class="nav__item"><a class="nav__link" href="/production-list.html">Для выращивания телят</a></div>
 													</div>
 												</div>
 											</div>
-											<div class="nav__item"><a class="nav__link" href="/agrostar/services.html">Услуги<div class="nav__trigger"><svg class="nav__icon svg">
+											<div class="nav__item"><a class="nav__link" href="/services.html">Услуги<div class="nav__trigger"><svg class="nav__icon svg">
 															<use xlink:href="img/svgSprite.svg#icon__triangle"></use>
 														</svg></div></a>
 												<div class="nav__inner">
 													<div class="nav__drop">
-														<div class="nav__item"><a class="nav__link" href="/agrostar/audit.html">Аудит хозяйств</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/diet.html">Расчет рациона</a></div>
-														<div class="nav__item"><a class="nav__link" href="/agrostar/lab.html">Лабораторные исследования</a></div>
+														<div class="nav__item"><a class="nav__link" href="/audit.html">Аудит хозяйств</a></div>
+														<div class="nav__item"><a class="nav__link" href="/diet.html">Расчет рациона</a></div>
+														<div class="nav__item"><a class="nav__link" href="/lab.html">Лабораторные исследования</a></div>
 													</div>
 												</div>
 											</div>
-											<div class="nav__item"><a class="nav__link" href="/agrostar/reviews.html">Отзывы</a></div>
-											<div class="nav__item"><a class="nav__link" href="/agrostar/contacts.html">Контакты</a></div>
+											<div class="nav__item"><a class="nav__link" href="/reviews.html">Отзывы</a></div>
+											<div class="nav__item"><a class="nav__link" href="/contacts.html">Контакты</a></div>
 										</div>
 									</div>
 									<div class="header__drop">
@@ -140,7 +139,7 @@
 						<div class="grid__row">
 							<div class="grid__col">
 								<div class="subheader__block">
-									<div class="breadcrumbs"><a class="breadcrumbs__item" href="/agrostar/">Главная</a></div>
+									<div class="breadcrumbs"><a class="breadcrumbs__item" href="/">Главная</a></div>
 									<h1 class="subheader__heading">Контакты</h1>
 								</div>
 							</div>
@@ -154,7 +153,7 @@
 								<div class="contacts__inner">
 									<div class="contacts__item">
 										<div class="contacts__icon"><svg class="vacancy-apply__icon svg">
-												<use xlink:href="img/svgSprite.svg#icon__company"></use>
+												<use xlink:href="/img/svgSprite.svg#icon__company"></use>
 											</svg></div>
 										<div class="contacts__info">
 											<div class="contacts__title">Компания:</div>
@@ -163,7 +162,7 @@
 									</div>
 									<div class="contacts__item">
 										<div class="contacts__icon"><svg class="vacancy-apply__icon svg">
-												<use xlink:href="img/svgSprite.svg#icon__phone"></use>
+												<use xlink:href="/img/svgSprite.svg#icon__phone"></use>
 											</svg></div>
 										<div class="contacts__info">
 											<div class="contacts__title">Телефоны:</div><a class="contacts__phone" href="tel:88432788654">+7 843 278 86 54</a><a class="contacts__phone" href="tel:89673683323">+7 967 36 83 323</a>
@@ -171,7 +170,7 @@
 									</div>
 									<div class="contacts__item">
 										<div class="contacts__icon"><svg class="vacancy-apply__icon svg">
-												<use xlink:href="img/svgSprite.svg#icon__mail"></use>
+												<use xlink:href="/img/svgSprite.svg#icon__mail"></use>
 											</svg></div>
 										<div class="contacts__info">
 											<div class="contacts__title">Пишите нам:</div><a class="contacts__mail" href="mailto:servisagro2@gmail.com">servisagro2@gmail.com</a>
@@ -179,7 +178,7 @@
 									</div>
 									<div class="contacts__item">
 										<div class="contacts__icon"><svg class="vacancy-apply__icon svg">
-												<use xlink:href="img/svgSprite.svg#icon__compass"></use>
+												<use xlink:href="/img/svgSprite.svg#icon__compass"></use>
 											</svg></div>
 										<div class="contacts__info">
 											<div class="contacts__title">Заходите в гости:</div>
