--- a/product.html
+++ b/product.html
@@ -171,7 +171,7 @@
 												<div class="prod__list-value">24 месяца</div>
 											</div>
 											<div class="prod__buttons"><a class="prod__button button js-popup" href="#popup-price">Узнать цену</a><a class="prod__video popup-video" href="http://www.youtube.com/watch?v=0O2aH4XLbto"><svg class="prod__video-icon svg">
-														<use xlink:href="/img/svgSprite.svg#icon__video"></use>
+														<use xlink:href="img/svgSprite.svg#icon__video"></use>
 													</svg>
 													<div class="prod__video-title">Смотреть видео</div>
 												</a></div>
