--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="ru-RU">
 	<head>
+		<base href="https://motosasha.github.io/agrostar/">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=3, minimum-scale=0.1">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -44,12 +45,12 @@
 					<div class="sidenav__scroll">
 						<div class="sidenav__inner">
 							<div class="nav nav_sidenav">
-								<div class="nav__item"><a class="nav__link" href="/about.html">О компании</a></div>
-								<div class="nav__item"><a class="nav__link" href="/production.html">Продукция</a></div>
-								<div class="nav__item"><a class="nav__link" href="/services.html">Услуги</a></div>
-								<div class="nav__item"><a class="nav__link" href="/reviews.html">Отзывы</a></div>
-								<div class="nav__item"><a class="nav__link" href="/video.html">Видео</a></div>
-								<div class="nav__item"><a class="nav__link" href="/contacts.html">Контакты</a></div>
+								<div class="nav__item"><a class="nav__link" href="/agrostar/about.html">О компании</a></div>
+								<div class="nav__item"><a class="nav__link" href="/agrostar/production.html">Продукция</a></div>
+								<div class="nav__item"><a class="nav__link" href="/agrostar/services.html">Услуги</a></div>
+								<div class="nav__item"><a class="nav__link" href="/agrostar/reviews.html">Отзывы</a></div>
+								<div class="nav__item"><a class="nav__link" href="/agrostar/video.html">Видео</a></div>
+								<div class="nav__item"><a class="nav__link" href="/agrostar/contacts.html">Контакты</a></div>
 							</div>
 							<div class="sidenav__phones">
 								<div class="phone-drop__img"><svg class="phone-drop__icon svg">
@@ -79,44 +80,44 @@
 										</svg></div>
 									<div class="header__nav">
 										<div class="nav">
-											<div class="nav__item"><a class="nav__link" href="/about.html">О компании<div class="nav__trigger"><svg class="nav__icon svg">
+											<div class="nav__item"><a class="nav__link" href="/agrostar/about.html">О компании<div class="nav__trigger"><svg class="nav__icon svg">
 															<use xlink:href="img/svgSprite.svg#icon__triangle"></use>
 														</svg></div></a>
 												<div class="nav__inner">
 													<div class="nav__drop">
-														<div class="nav__item"><a class="nav__link" href="/about.html#about">О нас</a></div>
-														<div class="nav__item"><a class="nav__link" href="/about.html#services">Услуги</a></div>
-														<div class="nav__item"><a class="nav__link" href="/about.html#prod">О производстве</a></div>
-														<div class="nav__item"><a class="nav__link" href="/about.html#lab">О лаборатории</a></div>
-														<div class="nav__item"><a class="nav__link" href="/about.html#vacancy">Вакансии</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#about">О нас</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#services">Услуги</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#prod">О производстве</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#lab">О лаборатории</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/about.html#vacancy">Вакансии</a></div>
 													</div>
 												</div>
 											</div>
-											<div class="nav__item"><a class="nav__link" href="/production.html">Продукция<div class="nav__trigger"><svg class="nav__icon svg">
+											<div class="nav__item"><a class="nav__link" href="/agrostar/production.html">Продукция<div class="nav__trigger"><svg class="nav__icon svg">
 															<use xlink:href="img/svgSprite.svg#icon__triangle"></use>
 														</svg></div></a>
 												<div class="nav__inner">
 													<div class="nav__drop">
-														<div class="nav__item"><a class="nav__link" href="/production-list.html">Для повышения удоев</a></div>
-														<div class="nav__item"><a class="nav__link" href="/production-list.html">Для здоровья коров</a></div>
-														<div class="nav__item"><a class="nav__link" href="/production-list.html">Для выращивания телят</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/production-list.html">Для повышения удоев</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/production-list.html">Для здоровья коров</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/production-list.html">Для выращивания телят</a></div>
 													</div>
 												</div>
 											</div>
-											<div class="nav__item"><a class="nav__link" href="/services.html">Услуги<div class="nav__trigger"><svg class="nav__icon svg">
+											<div class="nav__item"><a class="nav__link" href="/agrostar/services.html">Услуги<div class="nav__trigger"><svg class="nav__icon svg">
 															<use xlink:href="img/svgSprite.svg#icon__triangle"></use>
 														</svg></div></a>
 												<div class="nav__inner">
 													<div class="nav__drop">
-														<div class="nav__item"><a class="nav__link" href="/audit.html">Аудит хозяйств</a></div>
-														<div class="nav__item"><a class="nav__link" href="/diet.html">Расчет рациона</a></div>
-														<div class="nav__item"><a class="nav__link" href="/lab.html">Лабораторные исследования</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/audit.html">Аудит хозяйств</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/diet.html">Расчет рациона</a></div>
+														<div class="nav__item"><a class="nav__link" href="/agrostar/lab.html">Лабораторные исследования</a></div>
 													</div>
 												</div>
 											</div>
-											<div class="nav__item"><a class="nav__link" href="/reviews.html">Отзывы</a></div>
-											<div class="nav__item"><a class="nav__link" href="/video.html">Видео</a></div>
-											<div class="nav__item"><a class="nav__link" href="/contacts.html">Контакты</a></div>
+											<div class="nav__item"><a class="nav__link" href="/agrostar/reviews.html">Отзывы</a></div>
+											<div class="nav__item"><a class="nav__link" href="/agrostar/video.html">Видео</a></div>
+											<div class="nav__item"><a class="nav__link" href="/agrostar/contacts.html">Контакты</a></div>
 										</div>
 									</div>
 									<div class="header__drop">
@@ -145,7 +146,7 @@
 							<div class="grid__col"><img class="welcome__img" src="img/bg__welcome.jpg" alt="">
 								<div class="welcome__info">
 									<h1 class="welcome__title">Продажа кормов для сельскохоз животных</h1>
-									<div class="welcome__descr">Наши продукты позволяют оптимальным образом сбалансировать рацион, по питательным веществам, энергии и микроэлементам.</div><a class="welcome__button button" href="/production.html">Продукция</a>
+									<div class="welcome__descr">Наши продукты позволяют оптимальным образом сбалансировать рацион, по питательным веществам, энергии и микроэлементам.</div><a class="welcome__button button" href="/agrostar/production.html">Продукция</a>
 								</div>
 							</div>
 						</div>
@@ -155,19 +156,19 @@
 					<div class="grid">
 						<div class="grid__row">
 							<div class="grid__col">
-								<div class="prod-tiles prod-tiles_main-page"><a class="prod-tiles__item prod-tiles__item_light" href="/production-list.html">
+								<div class="prod-tiles prod-tiles_main-page"><a class="prod-tiles__item prod-tiles__item_light" href="/agrostar/production-list.html">
 										<div class="prod-tiles__title">Для повышения удоев</div>
 										<div class="prod-tiles__link">Подробнее<span></span></div>
 										<div class="prod-tiles__img"><svg class="svg">
 												<use xlink:href="img/svgSprite.svg#img__milk"></use>
 											</svg></div>
-									</a><a class="prod-tiles__item prod-tiles__item_middle" href="/production-list.html">
+									</a><a class="prod-tiles__item prod-tiles__item_middle" href="/agrostar/production-list.html">
 										<div class="prod-tiles__title">Корма для здоровья коров</div>
 										<div class="prod-tiles__link">Подробнее<span></span></div>
 										<div class="prod-tiles__img"><svg class="svg">
 												<use xlink:href="img/svgSprite.svg#img__cow"></use>
 											</svg></div>
-									</a><a class="prod-tiles__item prod-tiles__item_dark" href="/production-list.html">
+									</a><a class="prod-tiles__item prod-tiles__item_dark" href="/agrostar/production-list.html">
 										<div class="prod-tiles__title">Корма для выращивания телят</div>
 										<div class="prod-tiles__link">Подробнее<span></span></div>
 										<div class="prod-tiles__img"><svg class="svg">
