--- a/services.html
+++ b/services.html
@@ -214,6 +214,8 @@
 									</div>
 									<div class="footer-grid__item">
 										<div class="footer-unit"><a class="footer-unit__title" href="/reviews.html">Отзывы</a></div>
+									</div>
+									<div class="footer-grid__item">
 										<div class="footer-unit"><a class="footer-unit__title" href="/video.html">Видео</a></div>
 									</div>
 									<div class="footer-grid__item">
