--- a/reviews.html
+++ b/reviews.html
@@ -155,7 +155,13 @@
 							<div class="grid__col">
 								<div class="reviews">
 									<div class="reviews__item">
-										<div class="reviews__left"><a class="reviews__link popup-img" href="img/img__license_l.jpg"><img class="reviews__img" src="img/img__license.jpg" /></a></div>
+										<div class="reviews__left">
+											<div class="reviews__slider">
+												<div class="reviews__slide"><a class="reviews__link" href="img/img__license_l.jpg"><img class="reviews__img" src="img/img__license.jpg" /></a></div>
+												<div class="reviews__slide"><a class="reviews__link" href="img/img__license_l.jpg"><img class="reviews__img" src="img/img__license.jpg" /></a></div>
+												<div class="reviews__slide"><a class="reviews__link" href="img/img__license_l.jpg"><img class="reviews__img" src="img/img__license.jpg" /></a></div>
+											</div>
+										</div>
 										<div class="reviews__right">
 											<div class="reviews__title">ООО «Рога и копыта»</div>
 											<div class="reviews__list">
@@ -171,7 +177,11 @@
 										</div>
 									</div>
 									<div class="reviews__item">
-										<div class="reviews__left"><a class="reviews__link popup-img" href="img/img__license_l.jpg"><img class="reviews__img" src="img/img__license.jpg" /></a></div>
+										<div class="reviews__left">
+											<div class="reviews__slider">
+												<div class="reviews__slide"><a class="reviews__link" href="img/img__license_l.jpg"><img class="reviews__img" src="img/img__license.jpg" /></a></div>
+											</div>
+										</div>
 										<div class="reviews__right">
 											<div class="reviews__title">ООО «Альфа»</div>
 											<div class="reviews__list">
