--- a/index.html
+++ b/index.html
@@ -156,25 +156,44 @@
 					<div class="grid">
 						<div class="grid__row">
 							<div class="grid__col">
-								<div class="prod-tiles prod-tiles_main-page"><a class="prod-tiles__item prod-tiles__item_light" href="/agrostar/production-list.html">
-										<div class="prod-tiles__title">Для повышения удоев</div>
-										<div class="prod-tiles__link">Подробнее<span></span></div>
-										<div class="prod-tiles__img"><svg class="svg">
-												<use xlink:href="img/svgSprite.svg#img__milk"></use>
-											</svg></div>
-									</a><a class="prod-tiles__item prod-tiles__item_middle" href="/agrostar/production-list.html">
-										<div class="prod-tiles__title">Корма для здоровья коров</div>
-										<div class="prod-tiles__link">Подробнее<span></span></div>
-										<div class="prod-tiles__img"><svg class="svg">
-												<use xlink:href="img/svgSprite.svg#img__cow"></use>
-											</svg></div>
-									</a><a class="prod-tiles__item prod-tiles__item_dark" href="/agrostar/production-list.html">
-										<div class="prod-tiles__title">Корма для выращивания телят</div>
-										<div class="prod-tiles__link">Подробнее<span></span></div>
-										<div class="prod-tiles__img"><svg class="svg">
-												<use xlink:href="img/svgSprite.svg#img__calf"></use>
-											</svg></div>
-									</a></div>
+								<div class="prod-slider">
+									<div class="prod-slider__slide">
+										<div class="prod-tiles prod-tiles_main-page"><a class="prod-tiles__item prod-tiles__item_light" href="/agrostar/production-list.html">
+												<div class="prod-tiles__title">Для повышения удоев</div>
+												<div class="prod-tiles__link">Подробнее<span></span></div>
+												<div class="prod-tiles__img"><svg class="svg">
+														<use xlink:href="img/svgSprite.svg#img__milk"></use>
+													</svg></div>
+											</a></div>
+									</div>
+									<div class="prod-slider__slide">
+										<div class="prod-tiles prod-tiles_main-page"><a class="prod-tiles__item prod-tiles__item_middle" href="/agrostar/production-list.html">
+												<div class="prod-tiles__title">Корма для здоровья коров</div>
+												<div class="prod-tiles__link">Подробнее<span></span></div>
+												<div class="prod-tiles__img"><svg class="svg">
+														<use xlink:href="img/svgSprite.svg#img__cow"></use>
+													</svg></div>
+											</a></div>
+									</div>
+									<div class="prod-slider__slide">
+										<div class="prod-tiles prod-tiles_main-page"><a class="prod-tiles__item prod-tiles__item_dark" href="/agrostar/production-list.html">
+												<div class="prod-tiles__title">Корма для выращивания телят</div>
+												<div class="prod-tiles__link">Подробнее<span></span></div>
+												<div class="prod-tiles__img"><svg class="svg">
+														<use xlink:href="img/svgSprite.svg#img__calf"></use>
+													</svg></div>
+											</a></div>
+									</div>
+									<div class="prod-slider__slide">
+										<div class="prod-tiles prod-tiles_main-page"><a class="prod-tiles__item prod-tiles__item_middle" href="/agrostar/production-list.html">
+												<div class="prod-tiles__title">Консервант</div>
+												<div class="prod-tiles__link">Подробнее<span></span></div>
+												<div class="prod-tiles__img"><svg class="svg">
+														<use xlink:href="img/svgSprite.svg#img__rye"></use>
+													</svg></div>
+											</a></div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
