--- a/production.html
+++ b/production.html
@@ -171,6 +171,12 @@
 										<div class="prod-tiles__img"><svg class="svg">
 												<use xlink:href="img/svgSprite.svg#img__calf"></use>
 											</svg></div>
+									</a><a class="prod-tiles__item prod-tiles__item_middle" href="/agrostar/production-list.html">
+										<div class="prod-tiles__title">Консервант</div>
+										<div class="prod-tiles__link">Подробнее<span></span></div>
+										<div class="prod-tiles__img"><svg class="svg">
+												<use xlink:href="img/svgSprite.svg#img__rye"></use>
+											</svg></div>
 									</a></div>
 							</div>
 						</div>
